--- a/app/views/pages/validation.html.erb
+++ b/app/views/pages/validation.html.erb
@@ -286,6 +286,7 @@
       </div>
       <div class="modal-body">
         <%= form_with url: "", method: :patch, id: "rejectForm", authenticity_token: true do |form| %>
+        <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
           <div class="form-group">
             <%= form.label :rejection_reason, "Raison du refus" %>
             <%= form.text_area :rejection_reason, class: "form-control", id: "rejectionReasonField" %>
